service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-academic-service
spec:
  selector:
    app: k8s-academic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
