ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-academic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.nightcode.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-academic-service
            port:
              number: 80
